# vitality

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
docs/: release.md  runtime-trace-benchmark.md  schema.md
skills/: ARCHITECTURE.md  DEPENDENCY_GRAPH.md  RFC.md  TASKS.md  TDD-Reviewer.md
src/vitality/: __init__.py  cli.py
src/vitality/collector/: __init__.py  dependency_manifest.py  git_history.py  runtime_trace.py
src/vitality/reports/: __init__.py  dependency_audit.py  query.py
src/vitality/store/: db.py  schema.sql
tests/: test_cli_deps.py  test_cli_init.py  test_cli_query.py  test_cli_scan.py  test_dependency_manifest.py  test_docs_schema.py  test_git_history.py  test_packaging.py  test_project_structure.py  test_readme.py  test_runtime_trace.py  test_runtime_trace_benchmark_doc.py  test_schema.py  test_store_db.py
